fix: don't overflow footer

--- a/src/footer/styles.module.scss
+++ b/src/footer/styles.module.scss
@@ -5,7 +5,6 @@
   // Taken from AWS console
   z-index: 1002;
   bottom: 0;
-  width: 100%;
   border-top: 1px solid cs.$color-border-divider-default;
   background-color: cs.$color-background-container-content;
   height: cs.$space-scaled-xxxl;
